[package]
name = "blockchain"
version = "0.1.0"
authors = ["teheperor <teheperor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
env_logger = "0.7.1"
log = "0.4.0"
nickel = "0.11.0"
reqwest = "0.9.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8.0"
url = "2.1.0"
uuid = { version = "0.8.1", features = ["v4"] }
